--- a/Poseidon_SpringAPI/pom.xml
+++ b/Poseidon_SpringAPI/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>2.5.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -15,7 +15,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Projet7_Poseidon-SpringAPI</name>
 	<description>Financial Spring Rest API</description>
-	<packaging>jar</packaging>
+
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
